--- a/src/pages/profile/profile.css
+++ b/src/pages/profile/profile.css
@@ -3,33 +3,51 @@
   /* box-shadow: 5px 5px 5px 1px rgba(36, 113, 173, 0.68); */
   border-radius: 10px;
   padding: 1rem;
+  position: relative;
 }
 .profile-page-picture {
   width: 7rem;
   height: 7rem;
   border-radius: 50%;
-  margin-bottom: 2rem;
+  margin-bottom: 0.5rem;
+  object-fit: cover;
 }
 
 .profile-edit-btn {
-  /* width: 6rem;
-  height: 2rem; */
   padding: 0.5rem;
-  background-color: white;
+  background-color: lightskyblue;
   cursor: pointer;
   border: 1px solid gray;
+  color: white;
+  font-weight: 700;
+  margin-top: 0.3rem;
+  border-radius: 5px;
 }
 
 .profile-description {
   text-align: start;
+  margin: 1rem;
 }
 
 .user-social-status {
-  width: 20rem;
+  border: 1px solid lightblue;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: white;
-  border: 1px solid lightblue;
-  padding: 1rem;
+  padding: 1rem 3rem;
+  margin: 0.3rem 1rem;
+  border-radius: 5px;
+}
+
+.user-website-link {
+  text-decoration: none;
+  text-align: start;
+  margin: 1rem;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.user-website-link a {
+  margin-bottom: 3px;
 }
