--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -40,3 +40,31 @@
 .navlink:hover {
   color: lightblue;
 }
+
+.logout-btn {
+  border: 1px solid lightskyblue;
+  width: 6rem;
+  height: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  border-radius: 5px;
+  background-color: white;
+  cursor: pointer;
+  transition: 150ms;
+}
+
+.logout-btn:hover {
+  width: 6rem;
+  height: 2rem;
+  display: flex;
+  gap: 0.5rem;
+  font-size: 16px;
+  justify-content: center;
+  color: lightskyblue;
+  font-weight: bold;
+  background-color: white;
+  border-radius: 5px;
+  cursor: pointer;
+}
